--- a/css/rmc3.css
+++ b/css/rmc3.css
@@ -4,7 +4,7 @@ body {
 	font-size:20px;
 	line-height:40px;
 	-webkit-backface-visibility: hidden;
-	-webkit-overflow-scrolling: touch;
+	/*-webkit-overflow-scrolling: touch;*/
 }
 .page {
 overflow:hidden;
@@ -16,6 +16,12 @@ overflow:hidden;
 	   -moz-animation-fill-mode: both;
 	     -o-animation-fill-mode: both;
 	        animation-fill-mode: both;
+}
+.page-load {
+	position:absolute;
+	z-index:-1;
+	left:-2000px;
+	top:-2000px;
 }
 .page-show {
 	position:absolute;
@@ -398,10 +404,10 @@ background: linear-gradient(to bottom, rgba(122,188,255,1) 0%,rgba(96,171,248,1)
 
 /* down select */
 .down-list {
-	top:0px;
-	position:absolute;
+	bottom:0px;
+	position:fixed;
 	display:block;
-	height:160px;
+	height:200px;
 	/*background:#ff9;*/
 	width:100%;
 	background: rgb(69,72,77); /* Old browsers */
@@ -421,11 +427,26 @@ background: -o-linear-gradient(top, rgba(178,225,255,1) 0%,rgba(102,182,252,1) 1
 background: -ms-linear-gradient(top, rgba(178,225,255,1) 0%,rgba(102,182,252,1) 100%); /* IE10+ */
 background: linear-gradient(to bottom, rgba(178,225,255,1) 0%,rgba(102,182,252,1) 100%); /* W3C */
 }
+.down-list .con {
+	/*float:left;*/
+	
+	display:block;
+	width:100%;
+	background: rgb(204,204,204); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(204,204,204,1) 0%, rgba(0,0,0,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(204,204,204,1)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, rgba(204,204,204,1) 0%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(204,204,204,1) 0%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(204,204,204,1) 0%,rgba(0,0,0,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(204,204,204,1) 0%,rgba(0,0,0,1) 100%); /* W3C */
+}
 .down-list .sel {
 	position:absolute;
-	margin-top:40px;
-	height:40px;
-	line-height:40px;
+	/*margin-top:60px;
+	margin-right:10px;*/
+	top:100px;
+	height:30px;
+	line-height:30px;
 	width:100%;
 	display:block;
 	background: -moz-linear-gradient(top, rgba(178,225,255,1) 0%, rgba(102,182,252,1) 100%); /* FF3.6+ */
@@ -436,13 +457,10 @@ background: linear-gradient(to bottom, rgba(178,225,255,1) 0%,rgba(102,182,252,1
 	background: linear-gradient(to bottom, rgba(178,225,255,1) 0%,rgba(102,182,252,1) 100%); /* W3C */
 	opacity:0.5;
 }
-.down-list .con {
-	
-}
 .down-list .bar {
-	float:left;
+	/*float:left;*/
 	width:30%;
-	line-height:40px;
+	line-height:30px;
 	background: rgb(69,72,77); /* Old browsers */
 background: -moz-linear-gradient(top, rgba(69,72,77,1) 0%, rgba(224,217,217,1) 5%, rgba(255,255,255,1) 40%, rgba(255,255,255,1) 60%, rgba(224,217,217,1) 95%, rgba(69,72,77,1) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(69,72,77,1)), color-stop(5%,rgba(224,217,217,1)), color-stop(40%,rgba(255,255,255,1)), color-stop(60%,rgba(255,255,255,1)), color-stop(95%,rgba(224,217,217,1)), color-stop(100%,rgba(69,72,77,1))); /* Chrome,Safari4+ */
@@ -450,15 +468,17 @@ background: -webkit-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(224,217,217,1)
 background: -o-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(224,217,217,1) 5%,rgba(255,255,255,1) 40%,rgba(255,255,255,1) 60%,rgba(224,217,217,1) 95%,rgba(69,72,77,1) 100%); /* Opera 11.10+ */
 background: -ms-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(224,217,217,1) 5%,rgba(255,255,255,1) 40%,rgba(255,255,255,1) 60%,rgba(224,217,217,1) 95%,rgba(69,72,77,1) 100%); /* IE10+ */
 background: linear-gradient(to bottom, rgba(69,72,77,1) 0%,rgba(224,217,217,1) 5%,rgba(255,255,255,1) 40%,rgba(255,255,255,1) 60%,rgba(224,217,217,1) 95%,rgba(69,72,77,1) 100%); /* W3C */
-	height:120px;
+	height:150px;
 	text-align:center;
 	overflow:auto;
 }
+
 .down-list .bar .val {
 	display:inline-block;
-	line-height:40px;
-	height:40px;
+	line-height:30px;
+	height:30px;
 	width:100%;
+	font-weight:bold;
 }
 /* nav */
 .nav-5 {
@@ -517,14 +537,14 @@ background: linear-gradient(to bottom, rgba(69,72,77,1) 0%,rgba(224,217,217,1) 5
 
 /*清除*/
 .clear {zoom:1; clear:both;} 
-
+.clear:after {content:''; display:block; clear:both; visibility:hidden; height:0;}
 /* pageoverlay */
 #pageoverlay {
 	background: rgb(69,72,77); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(69,72,77,1) 0%, rgba(0,0,0,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(69,72,77,1)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* W3C */
+background: -moz-linear-gradient(top, rgba(69,72,77,0.8) 0%, rgba(0,0,0,0.8) 100%); /* FF3.6+ */
+background: -webkit-linear-gradient(top, rgba(69,72,77,0.8) 0%,rgba(0,0,0,0.8) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(69,72,77,0.8) 0%,rgba(0,0,0,0.8) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(69,72,77,0.8) 0%,rgba(0,0,0,0.8) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(69,72,77,0.8) 0%,rgba(0,0,0,0.8) 100%); /* W3C */
+pointer-events: none;
 }
