--- a/css/rmc3.css
+++ b/css/rmc3.css
@@ -406,16 +406,17 @@ background: linear-gradient(to bottom, rgba(122,188,255,1) 0%,rgba(96,171,248,1)
 .down-list {
 	bottom:0px;
 	position:fixed;
-	display:block;
+	display:none;
 	height:200px;
 	/*background:#ff9;*/
 	width:100%;
 	background: rgb(69,72,77); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(69,72,77,0.5) 0%, rgba(0,0,0,0.5) 100%); /* FF3.6+ */
-background: -webkit-linear-gradient(top, rgba(69,72,77,0.5) 0%,rgba(0,0,0,0.5) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, rgba(69,72,77,0.5) 0%,rgba(0,0,0,0.5) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, rgba(69,72,77,0.5) 0%,rgba(0,0,0,0.5) 100%); /* IE10+ */
-background: linear-gradient(to bottom, rgba(69,72,77,0.5) 0%,rgba(0,0,0,0.5) 100%); /* W3C */
+background: -moz-linear-gradient(top, rgba(69,72,77,1) 0%, rgba(0,0,0,1) 100%); /* FF3.6+ */
+background: -webkit-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* W3C */
+
 }
 .down-list .hd {
 	height:40px;
@@ -456,21 +457,64 @@ background: linear-gradient(to bottom, rgba(204,204,204,1) 0%,rgba(0,0,0,1) 100%
 	background: -ms-linear-gradient(top, rgba(178,225,255,1) 0%,rgba(102,182,252,1) 100%); /* IE10+ */
 	background: linear-gradient(to bottom, rgba(178,225,255,1) 0%,rgba(102,182,252,1) 100%); /* W3C */
 	opacity:0.5;
+	z-index:2;
+}
+.scroller {
+	position: absolute;
+	z-index: 1;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	width: 100%;
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-text-size-adjust: none;
+	-moz-text-size-adjust: none;
+	-ms-text-size-adjust: none;
+	-o-text-size-adjust: none;
+	text-size-adjust: none;
 }
 .down-list .bar {
 	/*float:left;*/
-	width:30%;
-	line-height:30px;
-	background: rgb(69,72,77); /* Old browsers */
+	position:relative;
+	float:left;
+	width: 100%;
+	height:150px;
+	 background: rgb(69,72,77); /* Old browsers */
 background: -moz-linear-gradient(top, rgba(69,72,77,1) 0%, rgba(224,217,217,1) 5%, rgba(255,255,255,1) 40%, rgba(255,255,255,1) 60%, rgba(224,217,217,1) 95%, rgba(69,72,77,1) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(69,72,77,1)), color-stop(5%,rgba(224,217,217,1)), color-stop(40%,rgba(255,255,255,1)), color-stop(60%,rgba(255,255,255,1)), color-stop(95%,rgba(224,217,217,1)), color-stop(100%,rgba(69,72,77,1))); /* Chrome,Safari4+ */
 background: -webkit-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(224,217,217,1) 5%,rgba(255,255,255,1) 40%,rgba(255,255,255,1) 60%,rgba(224,217,217,1) 95%,rgba(69,72,77,1) 100%); /* Chrome10+,Safari5.1+ */
 background: -o-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(224,217,217,1) 5%,rgba(255,255,255,1) 40%,rgba(255,255,255,1) 60%,rgba(224,217,217,1) 95%,rgba(69,72,77,1) 100%); /* Opera 11.10+ */
 background: -ms-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(224,217,217,1) 5%,rgba(255,255,255,1) 40%,rgba(255,255,255,1) 60%,rgba(224,217,217,1) 95%,rgba(69,72,77,1) 100%); /* IE10+ */
 background: linear-gradient(to bottom, rgba(69,72,77,1) 0%,rgba(224,217,217,1) 5%,rgba(255,255,255,1) 40%,rgba(255,255,255,1) 60%,rgba(224,217,217,1) 95%,rgba(69,72,77,1) 100%); /* W3C */
-	height:150px;
-	text-align:center;
-	overflow:auto;
+	overflow: hidden;
+}
+.bar.p20 {
+	width:20%;
+}
+.bar.p25 {
+	width:25%;
+}
+.bar.p30 {
+	width:30%;
+}
+.bar.p33 {
+	width:33%;
+}
+.bar.p40 {
+	width:40%;
+}
+.bar.p50 {
+	width:50%;
+}
+.bar.60 {
+	width:60%;
 }
 
 .down-list .bar .val {
@@ -479,6 +523,24 @@ background: linear-gradient(to bottom, rgba(69,72,77,1) 0%,rgba(224,217,217,1) 5
 	height:30px;
 	width:100%;
 	font-weight:bold;
+}
+
+.down-list ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	text-align: center;
+}
+
+.down-list li {
+	padding: 0 10px;
+	height: 30px;
+	line-height: 30px;
+	/*background-color: #fafafa;*/
+	font-size: 14px;
+	/*border-right:#ccc solid 3px;*/
+	padding:0 3px;
 }
 /* nav */
 .nav-5 {
