--- a/css/rmc3.css
+++ b/css/rmc3.css
@@ -6,6 +6,9 @@ body {
 	-webkit-backface-visibility: hidden;
 	/*-webkit-overflow-scrolling: touch;*/
 }
+a,a:hover,a:link {
+	text-decoration: none;
+}
 .page {
 overflow:hidden;
 	-webkit-animation-duration: 1s;
@@ -609,4 +612,39 @@ background: -o-linear-gradient(top, rgba(69,72,77,0.8) 0%,rgba(0,0,0,0.8) 100%);
 background: -ms-linear-gradient(top, rgba(69,72,77,0.8) 0%,rgba(0,0,0,0.8) 100%); /* IE10+ */
 background: linear-gradient(to bottom, rgba(69,72,77,0.8) 0%,rgba(0,0,0,0.8) 100%); /* W3C */
 pointer-events: none;
+}
+
+/*按鈕*/
+.btn {
+	/*display:inline-block;*/
+	font-size: 20px;
+	color: #3d3d3d;
+	padding: 4px 8px;
+	margin:0px;
+	background: rgb(255,255,255); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(255,255,255,1) 50%, rgba(181,181,181,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(50%,rgba(255,255,255,1)), color-stop(100%,rgba(181,181,181,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 50%,rgba(181,181,181,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 50%,rgba(181,181,181,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 50%,rgba(181,181,181,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 50%,rgba(181,181,181,1) 100%); /* W3C */
+	
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	border: 1px solid #9e9e9e;
+	-moz-box-shadow:
+		0px 1px 3px rgba(000,000,000,0.8),
+		inset 0px 0px 3px rgba(224,224,224,1);
+	-webkit-box-shadow:
+		0px 1px 3px rgba(000,000,000,0.8),
+		inset 0px 0px 3px rgba(224,224,224,1);
+	box-shadow:
+		0px 1px 3px rgba(000,000,000,0.8),
+		inset 0px 0px 3px rgba(224,224,224,1);
+	text-shadow:
+		0px -1px 0px rgba(000,000,000,0.2),
+		0px 1px 0px rgba(255,255,255,1);
+	
+	text-decoration: none;
 }
