--- a/css/rmc3.css
+++ b/css/rmc3.css
@@ -57,6 +57,14 @@ background: -o-linear-gradient(top,  #45484d 0%,#000000 100%); /* Opera 11.10+ *
 background: -ms-linear-gradient(top,  #45484d 0%,#000000 100%); /* IE10+ */
 background: linear-gradient(to bottom,  #45484d 0%,#000000 100%); /* W3C */
 }
+.header.pad{
+	padding:0px;
+	height:40px;
+	line-height:40px;
+}
+.header:after {
+	clear:both;	
+}
 .header.nav {
 	line-height:40px;
 	padding:0px;
@@ -76,6 +84,39 @@ background: linear-gradient(to bottom,  #45484d 0%,#000000 100%); /* W3C */
 	white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+.header-nameb.rmb {
+	margin-left:73px;
+}
+.header-namea {
+	display:block;
+	color:#fff;
+	/*background:#999;可設定也可以不用設定*/
+	width:100%;
+	/*padding:5px 0px;*/
+	white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.header .l-area {
+	display:inline-block;
+	float:left;
+	width:40px;
+	height:100%;
+	border-right:#333 inset 1px;
+	/*border-right-style:inset;/*邊框樣式*/
+	/*border-right-width:1px;/*邊框寛度*/
+	/*border-right-color:#fff;/*邊框顏色*/
+	/*padding:5px 0px;*/
+	color:#fff;
+}
+.header .r-area {
+	display:inline-block;
+	float:right;
+	width:40px;
+	height:100%;
+	border-left:#333 inset 1px;
+	color:#fff
 }
 /*header 按鈕*/
 .header .l-btn {
@@ -144,14 +185,24 @@ background: linear-gradient(to bottom, rgba(255,158,158,1) 0%,rgba(255,130,130,1
 	width:20px;
 	height:18px;
 	padding-top:2px;
-	background:#fff;
+	background: rgb(255,158,158); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(255,158,158,1) 0%, rgba(255,130,130,1) 100%); /* FF3.6+ */
+background: -webkit-linear-gradient(top, rgba(255,158,158,1) 0%,rgba(255,130,130,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(255,158,158,1) 0%,rgba(255,130,130,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(255,158,158,1) 0%,rgba(255,130,130,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(255,158,158,1) 0%,rgba(255,130,130,1) 100%); /* W3C */
 	border-radius:20px;
 	vertical-align: middle;
 	/*vertical-align: 10%;*/
 	pointer-events: none;
 	margin-left:2px;
+	
+	
 }
 .icon-back:before {
+	content:url(images/w/014a.png);
+}
+.icon-back-r:after {
 	content:url(images/w/014a.png);
 }
 .icon-home:before {
@@ -159,6 +210,12 @@ background: linear-gradient(to bottom, rgba(255,158,158,1) 0%,rgba(255,130,130,1
 }
 .icon-home-r:after {
 	content:url(images/w/018a.png);
+}
+.header .r-imbtn {
+	
+}
+.header .l-imbtn {
+	
 }
 .bg-transparent {
 	background:transparent;
@@ -682,6 +739,80 @@ background: linear-gradient(to bottom, rgba(69,72,77,1) 0%,rgba(224,217,217,1) 5
   .navb-5 li a:hover {
       color: #c00;
       background-color: #fff; }
+      
+/*list view*/
+.listview {
+	display:block;
+	list-style-type:none;
+	padding:0px 20px;
+	/*width:100%;*/
+}
+.listview li {
+	display:block;
+	/*width:%;*/
+	color:#333;
+	line-height:30px;
+	/*height:30px;*/
+	padding:5px;
+	overflow:hidden;
+	background: rgb(255,255,255); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(229,229,229,1) 100%); /* FF3.6+ */
+	background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* W3C */
+}
+.listview li:first-of-type {
+	border-radius: 7px 7px 0 0;
+}
+.listview li:last-of-type {
+	border-radius: 0 0 7px 7px;
+    border: none;
+}
+.listview li .l-img {
+	width:50px;
+	height:50px;
+	padding:0px;
+}
+.listview li .list {
+	display: block;
+    white-space: nowrap;
+    background-color: #ccc;
+    padding: 0 25px;
+    margin: 8px;
+    font: bold 16px/30px Arial, Helvetica;
+    text-decoration: none;
+    color: #333;
+    text-shadow: 0 1px 0 rgba(255,255,255,.8);
+	border-radius: 6px;
+	border-top: 1px solid #fff;
+	box-shadow: 0 0 0 1px #bbb;
+	background-image: linear-gradient(bottom, rgb(220,220,220) 50%, rgb(235,235,235) 50%);
+	background-image: -o-linear-gradient(bottom, rgb(220,220,220) 50%, rgb(235,235,235) 50%);
+	background-image: -moz-linear-gradient(bottom, rgb(220,220,220) 50%, rgb(235,235,235) 50%);
+	background-image: -webkit-linear-gradient(bottom, rgb(220,220,220) 50%, rgb(235,235,235) 50%);
+	background-image: -ms-linear-gradient(bottom, rgb(220,220,220) 50%, rgb(235,235,235) 50%);
+	
+	background-image: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0.5, rgb(220,220,220)),
+		color-stop(0.5, rgb(235,235,235))
+	);
+}
+.listview li .list:before{
+	background: rgba(0,0,0,.07);
+	float: left;
+	width: 25px;
+	text-align: center;
+	font-size: 25px;
+	margin: 0 20px 0 -25px;
+	padding: 0 4px;
+	box-shadow: 1px 0 0 #fff, 2px 0 0 #bbb;
+	/* -webkit-border-radius: 6px 0 0 6px; */
+	pointer-events: none;
+}
 
 /*清除*/
 .clear {zoom:1; clear:both;} 
