--- a/css/rmc3.css
+++ b/css/rmc3.css
@@ -118,6 +118,27 @@ background: linear-gradient(to bottom,  #45484d 0%,#000000 100%); /* W3C */
 	border-left:#333 inset 1px;
 	color:#fff
 }
+.tip {
+	display:inline-block;
+	width:2px;
+	height:2px;
+	position:relative;
+}
+.tip .tipnums {
+	display:inline-block;
+	position:absolute;
+	top:-22px;
+	left:-5px;
+	/*padding:2px;*/
+	background:#f00;
+	font-size:12px;
+	font-wieght:bold;
+	line-height:16px;
+	width:16px;
+	height:16px;
+	border-radius:16px;
+	padding-top:1px;
+}
 /*header 按鈕*/
 .header .l-btn {
 	float:left;
@@ -686,6 +707,172 @@ background: linear-gradient(to bottom, rgba(69,72,77,1) 0%,rgba(224,217,217,1) 5
 	padding:0 3px;
 }
 /* nav */
+.nav-2 {
+	  width: 100%;
+      float: left;
+      margin: 0 0 0 0;
+      padding: 0;
+      list-style: none;
+      background-color: #f2f2f2;
+      border-bottom: 1px solid #ccc; 
+      border-top: 1px solid #ccc;
+}
+.nav-2 li {
+	float:left;
+	width:50%;
+}
+.nav-2 li a {
+	display: block;
+	text-decoration: none;
+	text-align:center;
+	color:#069;
+	border-right: 1px solid #ccc; 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height:20px;
+    font-size:14px;
+    padding:2px;
+}
+.nav-2 li a:hover {
+	 color: #fff;
+     background: rgb(105,120,150); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(105,120,150,1) 0%, rgba(59,89,152,1) 100%); /* FF3.6+ */
+background: -webkit-linear-gradient(top, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* W3C */
+}
+.nav-2 img {
+	max-height:20px;
+}
+.nav-2 span {
+ 	display:block;
+	padding:6px 10px;
+	font-weight:bold;
+	display: block;
+	text-decoration: none;
+	text-align:center;
+	color:#069;
+	border-right: 1px solid #ccc; 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height:24px;
+     font-size:18px;
+}
+.nav-3 {
+	  width: 100%;
+      float: left;
+      margin: 0 0 0 0;
+      padding: 0;
+      list-style: none;
+      background-color: #f2f2f2;
+      border-bottom: 1px solid #ccc; 
+      border-top: 1px solid #ccc;
+}
+.nav-3 li {
+	float:left;
+	width:33%;
+}
+.nav-3 li:last-of-type {
+	float:left;
+	width:34%;
+}
+.nav-3 li a {
+	display: block;
+	text-decoration: none;
+	text-align:center;
+	color:#069;
+	border-right: 1px solid #ccc; 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height:20px;
+    font-size:14px;
+    padding:2px;
+}
+.nav-3 li a:hover {
+	 color: #fff;
+     background: rgb(105,120,150); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(105,120,150,1) 0%, rgba(59,89,152,1) 100%); /* FF3.6+ */
+background: -webkit-linear-gradient(top, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* W3C */
+}
+.nav-3 img {
+	max-height:20px;
+}
+.nav-3 span {
+ 	display:block;
+	padding:6px 10px;
+	font-weight:bold;
+	display: block;
+	text-decoration: none;
+	text-align:center;
+	color:#069;
+	border-right: 1px solid #ccc; 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height:24px;
+     font-size:18px;
+}
+.nav-4 {
+	  width: 100%;
+      float: left;
+      margin: 0 0 0 0;
+      padding: 0;
+      list-style: none;
+      background-color: #f2f2f2;
+      border-bottom: 1px solid #ccc; 
+      border-top: 1px solid #ccc;
+}
+.nav-4 li {
+	float:left;
+	width:25%;
+}
+.nav-4 li a {
+	display: block;
+	text-decoration: none;
+	text-align:center;
+	color:#069;
+	border-right: 1px solid #ccc; 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height:20px;
+    font-size:14px;
+    padding:2px;
+}
+.nav-4 li a:hover {
+	 color: #fff;
+     background: rgb(105,120,150); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(105,120,150,1) 0%, rgba(59,89,152,1) 100%); /* FF3.6+ */
+background: -webkit-linear-gradient(top, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* W3C */
+}
+.nav-4 img {
+	max-height:20px;
+}
+.nav-4 span {
+ 	display:block;
+	padding:6px 10px;
+	font-weight:bold;
+	display: block;
+	text-decoration: none;
+	text-align:center;
+	color:#069;
+	border-right: 1px solid #ccc; 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height:24px;
+     font-size:18px;
+}
 .nav-5 {
       width: 100%;
       float: left;
@@ -700,45 +887,46 @@ background: linear-gradient(to bottom, rgba(69,72,77,1) 0%,rgba(224,217,217,1) 5
       }
  .nav-5 li a {
       display: block;
-      padding: 8px 15px;
-      text-decoration: none;
-      font-weight: bold;
-      color: #069;
-      border-right: 1px solid #ccc; 
-       white-space: nowrap;
+	text-decoration: none;
+	text-align:center;
+	color:#069;
+	border-right: 1px solid #ccc; 
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    line-height:20px;
+    font-size:14px;
+    padding:2px;
   }
   .nav-5 li a:hover {
-      color: #c00;
-      background-color: #fff; }
+      color: #fff;
+     background: rgb(105,120,150); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(105,120,150,1) 0%, rgba(59,89,152,1) 100%); /* FF3.6+ */
+background: -webkit-linear-gradient(top, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(105,120,150,1) 0%,rgba(59,89,152,1) 100%); /* W3C */
       
-  .navb-5 {
-      width: 100%;
-      float: left;
-      margin: 0 0 0 0;
-      padding: 0;
-      list-style: none;
-      background-color: #f2f2f2;
-      border-bottom: 1px solid #ccc; 
-      border-top: 1px solid #ccc; }
- .navb-5 li {
-      float: left; width:20%;
-      }
- .navb-5 li a {
-      display: block;
-      padding: 8px 15px;
-      text-decoration: none;
-      font-weight: bold;
-      color: #069;
-      border-right: 1px solid #ccc; 
-       white-space: nowrap;
+}
+.nav-5 img {
+	max-height:20px;
+}
+.nav-5 span {
+ 	display:block;
+	padding:6px 10px;
+	font-weight:bold;
+	display: block;
+	text-decoration: none;
+	text-align:center;
+	color:#069;
+	border-right: 1px solid #ccc; 
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-  }
-  .navb-5 li a:hover {
-      color: #c00;
-      background-color: #fff; }
+    line-height:24px;
+     font-size:18px;
+}
+
       
 /*list view*/
 .listview {
